--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ theme: "starter-hugo-academic"
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Generics and Stereotypes in Language # Website name
-baseurl: 'https://generics-illc.netlify.app/' # Website URL
+baseurl: 'https://generics-illc.netlify.app' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
